<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right|top"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sound" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_bal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/money"
                    android:textAlignment="center"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_click"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Click" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:padding="40dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btn_amnt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X1" />

                    <Button
                        android:id="@+id/btn_amnt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X5" />

                    <Button
                        android:id="@+id/btn_amnt3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X20" />

                    <Button
                        android:id="@+id/btn_amnt4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Max" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_up1"
                        android:layout_width="140dp"
                        android:layout_height="70dp"
                        android:text="@string/upgrade1"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_up2"
                        android:layout_width="140dp"
                        android:layout_height="70dp"
                        android:text="@string/upgrade2"
                        android:visibility="gone" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_up3"
                        android:layout_width="140dp"
                        android:layout_height="70dp"
                        android:text="@string/upgrade3"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_up4"
                        android:layout_width="140dp"
                        android:layout_height="70dp"
                        android:text="@string/upgrade4"
                        android:visibility="gone" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_up5"
                        android:layout_width="140dp"
                        android:layout_height="70dp"
                        android:text="@string/upgrade5"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_up6"
                        android:layout_width="140dp"
                        android:layout_height="70dp"
                        android:text="@string/upgrade6"
                        android:visibility="gone" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>